--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3'
 
 services:
+
+  app:
+    build: .
+    entrypoint: dockerize -wait tcp://pgsql:5432 -timeout 59s ./.docker/entrypoint.sh
+    container_name: nestjs-api
+    ports:
+      - 3000:3000
+    volumes:
+      - .:/home/node/app
+    depends_on: 
+      - pgsql
+    networks:
+      - nestjs-network
+      
   pgsql:
     image: postgres:alpine
     ports:
@@ -8,16 +22,25 @@ services:
     container_name: 'pgsql'
     restart: always
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - ./storage/pg-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: pguser
       POSTGRES_PASSWORD: pgpassword
+    networks:
+      - nestjs-network
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+    environment:
+      ADMINER_DEFAULT_SERVER: pgsql
+    depends_on:
+      - pgsql
+    networks:
+      - nestjs-network
 
-volumes:
-  pg-data:
+networks: 
+  nestjs-network:
+    driver: bridge
