--- a/api/package.json
+++ b/api/package.json
@@ -75,6 +75,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "verbose": true,
+    "coverageReporters": ["json", "html"]
   }
 }
