--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "typescript": "^4.3.5",
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
-    "husky": "4"
+    "husky": "^4.2.5"
   },
   "jest": {
     "moduleFileExtensions": [
