--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 # compiled output
-/dist
-/node_modules
+dist
+node_modules
 
-/api/dist/*
-/api/node_modules
-/api/coverage
-/api/storage
+coverage
+storage
 
 dist
 # Logs
