--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "",
   "private": true,
@@ -22,7 +22,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm migration:generate -- -n",
-    "migration:run": "npm run build && npm run typeorm migration:run"
+    "migration:run": "npm run build && npm run typeorm migration:run",
+    "commit": "git-cz",
+    "release": "standard-version"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -33,6 +35,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "commitizen": "^4.2.4",
     "nest-winston": "^1.6.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -54,6 +57,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -61,6 +65,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
+    "standard-version": "^9.3.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
@@ -95,6 +100,11 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "npm run prettier-format && npm run lint"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
