--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -24,7 +23,12 @@
     "migration:generate": "npm run typeorm migration:generate -- -n",
     "migration:run": "npm run build && npm run typeorm migration:run",
     "commit": "git-cz",
-    "release": "standard-version"
+    "release": "standard-version",
+    "compodoc": "npx @compodoc/compodoc -p tsconfig.json -s src --theme Postmark",
+    "lint:scss": "stylelint 'src/**/*.scss' --syntax scss",
+    "lint:scss:fix": "stylelint 'src/**/*.scss' --syntax scss --fix",
+    "lint:js": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:js:fix": "npm run lint:js -- --fix"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -48,6 +52,7 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@compodoc/compodoc": "^1.1.16",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -63,6 +68,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.2.5",
+    "lint-staged": "^12.1.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "standard-version": "^9.3.2",
@@ -96,10 +102,18 @@
       "html"
     ]
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "eslint . --fix", "git add"
+    ],
+    "src/**/*.scss": [
+      "stylelint --syntax scss --fix", "git add"
+    ]
+  },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run prettier-format && npm run lint"
+      "pre-commit": "npm run prettier-format && lint-staged"
     }
   },
   "config": {
