--- a/.env-sample
+++ b/.env-sample
@@ -9,3 +9,4 @@ TYPEORM_ENTITIES=dist/**/*.entity.js
 TYPEORM_MIGRATIONS=dist/migrations/**/*.js
 TYPEORM_ENTITIES_DIR=src
 TYPEORM_MIGRATIONS_DIR=src/migrations
+TYPEORM_SYNCHRONIZE=false
