--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run prettier-format && lint-staged"
+      "pre-commit": "npm run prettier-format && lint-staged && npm run compodoc"
     }
   },
   "config": {
