--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
+  "semi": true,
+  "trailingComma": "es5",
+  "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "all",
-  "endOfLine":"auto",
-  "semi": true
+  "arrowParens": "always",
+  "proseWrap": "preserve",
+  "endOfLine":"auto"
 }
