feat(component): teste
teste

#123

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 TYPEORM_CONNECTION=postgres
-TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=localhost
+TYPEORM_HOST=pgsql
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=pguser
 TYPEORM_PASSWORD=pgpassword
@@ -10,3 +9,6 @@ TYPEORM_MIGRATIONS=dist/migrations/**/*.js
 TYPEORM_ENTITIES_DIR=src
 TYPEORM_MIGRATIONS_DIR=src/migrations
 TYPEORM_SYNCHRONIZE=false
+
+TYPEORM_DATABASE_TEST=teste
+TYPEORM_ENTITIES_TEST=dist/**/*.entity..ts
