--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=pgsql
+TYPEORM_HOST=localhost
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=pguser
 TYPEORM_PASSWORD=pgpassword
