--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   ##################################### NESTJS Dev #####################################
-  nest-api-dev2:
+  nest-api-dev:
     container_name: nestjs_api_dev
     image: nestjs-api-dev:1.0.0
     build:
